--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 /*--------------------- HEADER -----------------------*/
 .header-logo{
-  font-family: Raleway;
+font-family: "Raleway", sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
@@ -38,7 +38,11 @@ color: #2196F3;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #2196f3;
+  color: #757575;
+}
+.header-mail:focus,
+.header-mail:hover{
+color: #2196f3;
 }
 
 .header-tel {
@@ -139,7 +143,7 @@ color: #757575;
 }
 
 .footer-logo{
-font-family: Raleway;
+font-family: "Raleway", sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
